# OpenSentinel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml  opensentinel.example.json
.github/workflows/: ci.yml  opensentinel.yml  security.yml
benches/: parser_benchmark.rs
data/: known_malicious.json
examples/: test_conn.rs
migrations/: 001_initial_schema.sql  002_version_behavior.sql  003_maintainer_metrics.sql  004_scan_results_json.sql
src/: lib.rs  main.rs
src/advisory/: fetcher.rs  github.rs  github_meta.rs  mitre.rs  mod.rs  models.rs  npm_versions.rs  nvd.rs  osv.rs
src/analyzer/: ast.rs  credential.rs  install_hook.rs  mod.rs  models.rs  patterns.rs  typosquatting.rs  version_behavior.rs  version_resolver.rs
src/cache/: manager.rs  mod.rs
src/cli/: handlers.rs  mod.rs
src/community/: checker.rs  mod.rs  models.rs
src/config/: loader.rs  mod.rs  models.rs  resolver.rs
src/database/: mod.rs  models.rs  pool.rs
src/database/queries/: advisories.rs  maintainer.rs  mod.rs  packages.rs  scans.rs  version_diffs.rs
src/parser/: bun.rs  detector.rs  golang.rs  mod.rs  models.rs  nodejs.rs  python.rs  resolver.rs  rust_cargo.rs
src/pipeline/: mod.rs  orchestrator.rs  progress.rs
src/report/: html.rs  json.rs  mod.rs  sbom.rs  table.rs
src/scoring/: engine.rs  maintainer.rs  mod.rs  models.rs
src/tui/: app.rs  events.rs  init_wizard.rs  mod.rs  panels.rs  renderer.rs  theme.rs
tests/: db_queries_test.rs  osv_client_test.rs
