[package]
name = "opensentinel"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Garcia <opensentienel.unbraided990@passinbox.com>"]
description = "Supply Chain Security Scanner - Analyze dependencies for vulnerabilities and malicious patterns"
repository = "https://github.com/yourusername/opensentinel"
license = "Apache-2.0"
keywords = ["security", "supply-chain", "dependencies", "vulnerabilities"]
categories = ["command-line-utilities", "security"]

[[bin]]
name = "opse"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.27"
crossterm = { version = "0.28", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
config = "0.13"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
clap = { version = "4", features = ["derive", "cargo"] }
anyhow = "1"
thiserror = "1"
regex = "1"
lazy_static = "1"
moka = { version = "0.12", features = ["future"] }
async-trait = "0.1"
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-rust = "0.21"
cyclonedx-bom = "0.8"
url = "2"
tinytemplate = "1"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
mime = "0.3"
keyring = "2"
dirs = "5"
walkdir = "2"
globset = "0.4"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
semver = { version = "1", features = ["serde"] }
notify = { version = "6", features = ["macos_kqueue"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
criterion = "0.5"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "parser_benchmark"
harness = false
